@@ -1,3 +1,6 @@
+2016-07-29  Kirit Saelensminde  <kirit@felspar.com>
+ Add middleware that can alter the request by adding headers to it.
+
 2016-07-27  Kirit Saelensminde  <kirit@felspar.com>
  Add `execute` method to the view to make forwarding to embedded views easier.
 
